--- a/price-client-service/src/main/resources/application.properties
+++ b/price-client-service/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 server.port=9099
 
+#eureka.client.registerWithEureka=false
+#eureka.client.fetchRegistry=false
+#eureka.server.enableSelfPreservation= false
+#
+#management.security.enabled=false
+
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
 eureka.client.lease.duration=5
+
+ribbon.eureka.enabled=true
+
+users.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.WeightedResponseTimeRule
 
 spring.application.name=price-client-service
 
