Added Create,update functionality;

--- a/price-client-service/src/main/resources/application.properties
+++ b/price-client-service/src/main/resources/application.properties
@@ -11,7 +11,7 @@ eureka.client.lease.duration=5
 
 ribbon.eureka.enabled=true
 
-users.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.WeightedResponseTimeRule
+users.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RoundRobinRule
 
 spring.application.name=price-client-service
 
