added custom health checking

--- a/price-client-service/src/main/resources/application.properties
+++ b/price-client-service/src/main/resources/application.properties
@@ -16,3 +16,4 @@ users.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RoundRobinRule
 spring.application.name=price-client-service
 
 service.price.url=http://price-service/prices
+service.price.liveness=http://price-service/liveness
