added Spring cloud bus

--- a/price-client-service/src/main/resources/application.properties
+++ b/price-client-service/src/main/resources/application.properties
@@ -13,6 +13,8 @@ ribbon.eureka.enabled=true
 
 users.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RoundRobinRule
 
+#management.security.enabled=false
+
 spring.application.name=price-client-service
 
 service.price.url=http://price-service/prices
