--- a/price-service/src/main/resources/application.properties
+++ b/price-service/src/main/resources/application.properties
@@ -6,3 +6,10 @@ server.port=9097
 #eureka.client.lease.duration=5
 
 spring.application.name=price-service
+
+queue.name=messagequeue
+fanout.exchange=messagequeue-exchange
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
