--- a/price-service/pom.xml
+++ b/price-service/pom.xml
@@ -52,6 +52,22 @@
 			<version>1.2.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.pricepopulator</groupId>
+			<artifactId>common-prices</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
