--- a/price-client-service/pom.xml
+++ b/price-client-service/pom.xml
@@ -67,6 +67,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-hystrix</artifactId>
+			<version>1.1.5.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
